Plugged another CSS hole, namely overflow was never reset at the top of starbar-generic.css. This fixes the bar on the content-editor, for example

--- a/public/css/starbar-generic.css
+++ b/public/css/starbar-generic.css
@@ -30,6 +30,7 @@
 	box-sizing:content-box;
 	-moz-box-sizing:content-box;
 	-webkit-box-sizing:content-box;
+	overflow: visible;
 }
 #sayso-starbar article, #sayso-starbar aside, #sayso-starbar details, #sayso-starbar figcaption, #sayso-starbar figure, #sayso-starbar footer, #sayso-starbar header, #sayso-starbar hgroup, #sayso-starbar menu, #sayso-starbar nav, #sayso-starbar section {
 	display: block;
